another attempted fix for IE11 layout issue

--- a/webinterface/static/assets/css/default.css
+++ b/webinterface/static/assets/css/default.css
@@ -426,3 +426,5 @@ input.error:after, select.error:after{
         display: none;
     }
 }
+/* IE fix */
+@-ms-viewport { width: device-width; }
